# ORB-SLAM3-ROS2-Docker

container_root/: .bash_history  .viminfo
container_root/colcon_ws/: map.txt  new_map.txt  octo_mapop.txt  projected_map.txt  updated_map.txt
orb_slam3_navigator/: octo_map_parse.py  package.xml  setup.cfg  setup.py
orb_slam3_navigator/orb_slam3_navigator/: obstacle_avoidance.py  orb_slam3_movement_controller.py  orb_slam3_navigator.py  orb_slam3_navigator_first_try.py  orb_slam_navigator.py  orb_slam_navigator_first_try.py  path_planner.py  projected_map_navigator.py  simple_navigation.py
orb_slam3_ros2_wrapper/: CMakeLists.txt
orb_slam3_ros2_wrapper/include/orb_slam3_ros2_wrapper/: orb_slam3_interface.hpp
orb_slam3_ros2_wrapper/launch/: fusion_multi.launch.py  multi_robot.launch _1.py  multi_robot.launch.py  unirobot.launch _1.py
orb_slam3_ros2_wrapper/params/: rgbd-ros-params.yaml
orb_slam3_ros2_wrapper/scripts/: map_merger.py  point_cloud_merger.py
orb_slam3_ros2_wrapper/src/: orb_slam3_interface.cpp
orb_slam3_ros2_wrapper/src/multi_map_fusion/: multi_map_fusion.cpp  orb_slam3_multi_map_fusion.cpp  orb_slam3_multi_map_fusion.hpp
orb_slam3_ros2_wrapper/src/rgbd/: rgbd-slam-node.cpp  rgbd-slam-node.hpp
